--- a/index.html
+++ b/index.html
@@ -13,22 +13,20 @@
             <label for="roomNumber">Room Number:</label>
             <input type="text" id="roomNumber" name="roomNumber" required>
 
-            <!-- เปลี่ยนจาก Issue เป็น Topic -->
             <label for="topic">Issue Topic:</label>
             <input type="text" id="topic" name="issue" required>
 
             <label for="details">Issue Details:</label>
             <textarea id="details" name="details" required></textarea>
 
-            <!-- เพิ่ม container สำหรับปุ่ม -->
             <div class="button-container">
                 <button type="reset" id="clearBtn">Clear</button>
                 <button type="submit">Submit Report</button>
             </div>
         </form>
 
-        <!-- แสดงวันที่และเวลาที่บันทึก -->
         <p id="displayDateTime"></p>
+        <div id="loadingStatus" style="display:none;">Submitting report...</div>
     </div>
 
     <script src="script.js"></script>
