#add cirecle when processing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>IT Issue Report</h2>
         <form id="reportForm">
             <label for="roomNumber">Room Number:</label>
-            <input type="text" id="roomNumber" name="roomNumber" required>
+            <input type="gtext" id="roomNumber" name="roomNumber" required>
 
             <label for="topic">Issue Topic:</label>
             <input type="text" id="topic" name="issue" required>
