#เพิ่มCss ใหม่ #เงื่อนไขroomnumber

--- a/index.html
+++ b/index.html
@@ -3,36 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guest Issue Report</title>
+    <title>Guest & IT Issue Report</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="form-container">
-        <h2>IT Issue Report</h2>
-        <form id="reportForm">
-            <label for="roomNumber">Room Number:</label>
-            <input type="gtext" id="roomNumber" name="roomNumber" required>
 
-            <label for="topic">Issue Topic:</label>
-            <input type="text" id="topic" name="issue" required>
+<div class="form-container">
+    <h2>Issue Report Form</h2>
+    <form id="reportForm">
+        <label for="roomNumber">Room Number:</label>
+        <input type="text" id="roomNumber" name="roomNumber" placeholder="Enter room number" required>
 
-            <label for="details">Issue Details:</label>
-            <textarea id="details" name="details" required></textarea>
+        <label for="topic">Issue Topic:</label>
+        <input type="text" id="topic" name="issue" placeholder="Enter issue topic" required>
 
-            <div class="button-container">
-                <button type="reset" id="clearBtn">Clear</button>
-                <button type="submit">Submit Report</button>
-            </div>
-        </form>
+        <label for="description">Issue Details:</label>
+        <textarea id="description" name="details" placeholder="Describe the issue" required></textarea>
 
+        <div class="button-container">
+            <button type="reset" id="clearBtn">Clear</button>
+            <button type="submit" disabled>Submit Report</button>
+        </div>
         <p id="displayDateTime"></p>
-    </div>
+    </form>
+</div>
 
-    <div id="loadingStatus" class="processing-overlay" style="display:none;">
-        <div class="circle"></div>
-        <p>Submitting report...</p>
-    </div>
+<div class="processing-overlay" id="overlay" style="display: none;">
+    <div class="circle"></div>
+    <p>Processing...</p>
+</div>
 
-    <script src="script.js"></script>
+<script>
+const submitButton = document.querySelector("button[type='submit']");
+const clearButton = document.getElementById("clearBtn");
+const inputs = document.querySelectorAll("input, textarea");
+const overlay = document.getElementById("overlay");
+const form = document.getElementById("reportForm");
+
+function checkInputs() {
+    const isFilled = Array.from(inputs).every(input => input.value.trim() !== "");
+    submitButton.disabled = !isFilled;
+}
+
+inputs.forEach(input => {
+    input.addEventListener("input", checkInputs);
+});
+
+form.addEventListener("submit", function(event) {
+    event.preventDefault(); // Prevent the default form submission
+
+    var roomNumber = document.getElementById("roomNumber").value;
+    var issue = document.getElementById("topic").value;
+    var details = document.getElementById("description").value;
+
+    // Check if all fields are filled
+    if (!roomNumber || !issue || !details) {
+        alert("Please fill in all fields");
+        return;
+    }
+
+    // Validate room number: must contain A, B, or C and 3 digits
+    const roomNumberRegex = /[ABC]/i; // Check for A, B, or C (case insensitive)
+    const numberRegex = /\d{3}/; // Check for 3 digits
+
+    if (!roomNumberRegex.test(roomNumber)) {
+        alert("Please input A, B, or C Building in Room Number.");
+        return;
+    }
+    
+    if (!numberRegex.test(roomNumber)) {
+        alert("Room number must contain 3 digits.");
+        return;
+    }
+
+    var now = new Date();
+    var localDateTime = now.toLocaleString('th-TH', { timeZone: 'Asia/Bangkok' });
+    var isoDateTime = now.toLocaleString('th-TH', { 
+        timeZone: 'Asia/Bangkok',
+        year: 'numeric',
+        month: '2-digit',
+        day: '2-digit',
+        hour: '2-digit',
+        minute: '2-digit',
+        second: '2-digit',
+        hour12: false
+    });
+
+    document.getElementById("displayDateTime").textContent = "Reported on: " + localDateTime;
+
+    document.getElementById("overlay").style.display = "flex"; // Show processing overlay
+
+    var data = {
+        roomNumber: roomNumber,
+        issue: issue,
+        dateTime: isoDateTime,
+        details: details
+    };
+
+    // Simulate submitting data (for demo purposes)
+    setTimeout(() => {
+        alert("Report submitted successfully!");
+        
+        // Reset form and reload page to clear the form
+        form.reset();
+        window.location.reload();
+    }, 2000); // Simulate a 2-second delay for submission
+});
+</script>
+
 </body>
 </html>
